--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -105,6 +105,7 @@ This program is available under Apache License Version 2.0, available at https:/
        * -------------|-------------|------------
        * `disabled` | Set to a disabled text field | :host
        * `has-value` | Set when the element has a value | :host
+       * `has-label` | Set when the element has a label | :host
        * `invalid` | Set when the element is invalid | :host
        * `focused` | Set when the element is focused | :host
        * `focus-ring` | Set when the element is keyboard focused | :host
