Depend on latest Lumo styles changes [skip ci]
Custom property rename: `--lumo-icon-size` → `--lumo-icon-size-m`

Icon rename: `magnifier` → `search`

--- a/demo/text-field-prefix-suffix-demos.html
+++ b/demo/text-field-prefix-suffix-demos.html
@@ -25,7 +25,7 @@
     <vaadin-demo-snippet id="text-field-prefix-suffix-demos-basic">
       <template preserve-content>
         <vaadin-text-field placeholder="Search">
-          <iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon>
+          <iron-icon icon="lumo:search" slot="prefix"></iron-icon>
         </vaadin-text-field>
 
         <vaadin-text-field value="joe@example.com">
