--- a/theme/lumo/vaadin-password-field.html
+++ b/theme/lumo/vaadin-password-field.html
@@ -17,7 +17,7 @@
 
       /* Reduce the default width to accommodate the reveal button */
       :host(:not([reveal-button-hidden])) [part="value"] {
-        width: calc(10em - var(--lumo-icon-size));
+        width: calc(10em - var(--lumo-icon-size-m));
       }
 
       /* Make it easy to hide the button across the whole app */
