--- a/theme/lumo/vaadin-text-area.html
+++ b/theme/lumo/vaadin-text-area.html
@@ -9,8 +9,8 @@
     <style include="lumo-text-field">
       [part="input-field"] {
         /* Equal to the implicit padding in vaadin-text-field */
-        padding-top: calc((var(--lumo-text-field-size) - var(--lumo-icon-size)) / 2);
-        padding-bottom: calc((var(--lumo-text-field-size) - var(--lumo-icon-size)) / 2);
+        padding-top: calc((var(--lumo-text-field-size) - var(--lumo-icon-size-m)) / 2);
+        padding-bottom: calc((var(--lumo-text-field-size) - var(--lumo-icon-size-m)) / 2);
         height: auto;
         box-sizing: border-box;
         transition: background-color 0.1s;
@@ -35,8 +35,8 @@
       }
 
       [part="value"] {
-        padding-top: calc((var(--lumo-icon-size) - 1em * var(--lumo-line-height-s)) / 2);
-        padding-bottom: calc((var(--lumo-icon-size) - 1em * var(--lumo-line-height-s)) / 2);
+        padding-top: calc((var(--lumo-icon-size-m) - 1em * var(--lumo-line-height-s)) / 2);
+        padding-bottom: calc((var(--lumo-icon-size-m) - 1em * var(--lumo-line-height-s)) / 2);
         line-height: var(--lumo-line-height-s);
         --_lumo-text-field-overflow-mask-image: none;
       }
