--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -313,15 +313,15 @@
 
       [part="input-field"] ::slotted(iron-icon) {
         color: var(--lumo-contrast-50pct);
-        width: var(--lumo-icon-size);
-        height: var(--lumo-icon-size);
+        width: var(--lumo-icon-size-m);
+        height: var(--lumo-icon-size-m);
       }
 
       /* Vaadin icons are based on a 16x16 grid (unlike Lumo and Material icons with 24x24), so they look too big by default */
 
       [part="input-field"] ::slotted(iron-icon[icon^="vaadin:"]) {
-        width: calc(var(--lumo-icon-size) - 0.5em);
-        height: calc(var(--lumo-icon-size) - 0.5em);
+        width: calc(var(--lumo-icon-size-m) - 0.5em);
+        height: calc(var(--lumo-icon-size-m) - 0.5em);
         padding: 0.25em;
       }
     </style>
