--- a/test/visual/vaadin-password-field/lumo.html
+++ b/test/visual/vaadin-password-field/lumo.html
@@ -16,9 +16,9 @@
 
 <h2>Sizing</h2>
 
-<vaadin-password-field style="width: 140px;" label="Long label which does not fit" placeholder="width: 140px" error-message="Long error message that wraps on multiple lines" required invalid><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
-<vaadin-password-field style="width: 300px;" label="Label" placeholder="width: 300px" error-message="Error" required invalid><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
-<vaadin-password-field style="height: 200px;" label="Label" placeholder="height: 200px" error-message="Error" required invalid><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field style="width: 140px;" label="Long label which does not fit" placeholder="width: 140px" error-message="Long error message that wraps on multiple lines" required invalid><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field style="width: 300px;" label="Label" placeholder="width: 300px" error-message="Error" required invalid><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field style="height: 200px;" label="Label" placeholder="height: 200px" error-message="Error" required invalid><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
 
 <h2>Vertical align</h2>
@@ -26,40 +26,41 @@
 <span>Plain text</span>
 <vaadin-button>Button</vaadin-button>
 
-<vaadin-password-field><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-text-field><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-text-field>
 
-<vaadin-password-field placeholder="Placeholder"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field placeholder="Placeholder"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-password-field value="Value"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field value="Value"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-password-field label="Label"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field label="Label"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-password-field error-message="Long error message that wraps on multiple lines" required><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field error-message="Long error message that wraps on multiple lines" required><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-password-field label="Label" value="Value"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field label="Label" value="Value"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-password-field label="Label" placeholder="Placeholder" error-message="Error" required invalid><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field label="Label" placeholder="Placeholder" error-message="Error" required invalid><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-button><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon>Button</vaadin-button>
+<vaadin-button><iron-icon icon="lumo:search" slot="prefix"></iron-icon>Button</vaadin-button>
 
-<vaadin-password-field label="Label" placeholder="Placeholder" error-message="Error" required invalid theme="small"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field label="Label" placeholder="Placeholder" error-message="Error" required invalid theme="small"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
-<vaadin-button theme="small"><iron-icon icon="lumo:magnifier" slot="suffix"></iron-icon>Button</vaadin-button>
+<vaadin-button theme="small"><iron-icon icon="lumo:search" slot="suffix"></iron-icon>Button</vaadin-button>
 
 
 <h2>Sizing</h2>
 
 <h4>Default width:</h4>
 <vaadin-password-field label="Label"></vaadin-password-field><br>
-<vaadin-password-field label="Label"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+<vaadin-password-field label="Label"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 
 <h4>Inside a row flex container:</h4>
 <div style="display: flex;">
-  <vaadin-password-field label="Label" placeholder="stretch by default"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
-  <vaadin-password-field style="flex: auto;" label="Label" error-message="Long error message that wraps on multiple lines" required invalid placeholder="flex: auto"><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+  <vaadin-password-field label="Label" placeholder="stretch by default"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+  <vaadin-password-field style="flex: auto;" label="Label" error-message="Long error message that wraps on multiple lines" required invalid placeholder="flex: auto"><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 </div>
 
 <h4>Inside a column flex container:</h4>
 <div style="display: flex; flex-direction: column;">
-  <vaadin-password-field label="Label" error-message="Long error message that wraps on multiple lines" required invalid><iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
+  <vaadin-password-field label="Label" error-message="Long error message that wraps on multiple lines" required invalid><iron-icon icon="lumo:search" slot="prefix"></iron-icon><iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon></vaadin-password-field>
 </div>
