De-emphasize read-only field text [skip ci]

--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -210,6 +210,7 @@
       /* Read-only */
 
       :host([readonly]) [part="input-field"] {
+        color: var(--lumo-secondary-text-color);
         background-color: transparent;
         border: 1px dashed var(--lumo-contrast-40pct);
       }
