--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -38,6 +38,7 @@ This program is available under Apache License Version 2.0, available at https:/
           title="[[title]]"
           on-blur="validate"
           on-input="_onInput"
+          on-change="_onChange"
           aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
           aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
           aria-invalid$="[[invalid]]"
