--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -60,6 +60,7 @@ This program is available under Apache License Version 2.0, available at https:/
             value="{{value::input}}"
             on-blur="validate"
             on-input="_onInput"
+            on-change="_onChange"
             aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
             aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
             aria-invalid$="[[invalid]]"></textarea>
