--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -76,7 +76,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         static get version() {
-          return '2.0.0-alpha10';
+          return '2.0.0-beta1';
         }
 
         static get properties() {
