Fix test to not depend on the theme styles

--- a/test/text-area.html
+++ b/test/text-area.html
@@ -275,6 +275,7 @@
         inputField.style.padding = '0';
         inputField.style.border = 'none';
         textArea.style.minHeight = '300px';
+        textArea.style.padding = '0';
         textArea.value = 'foo';
 
         expect(input.clientHeight).to.equal(Math.round(
