Prototype avoiding `display: inline-flex;` for the host
…while still making vertical alignment work as expected.

Move the label element ouside the container element and introduce an explicit aligner element inside the text-field part.

Not having flex display on the host breaks text area sizing – you can’t assign a size for the host and expect the internal text-field part to expand to fill the available height.

--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -12,7 +12,6 @@ This program is available under Apache License Version 2.0, available at https:/
   <template>
     <style include="vaadin-text-field-shared-styles">
       .vaadin-text-area-container {
-        flex: auto;
         max-height: inherit; /* MSIE 11 */
         min-height: inherit; /* MSIE 11 */
       }
@@ -38,11 +37,13 @@ This program is available under Apache License Version 2.0, available at https:/
       }
     </style>
 
+    <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
+
     <div class="vaadin-text-area-container">
 
-      <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
-
       <div part="input-field">
+
+        <span class="vaadin-text-area-aligner"></span>
 
         <slot name="prefix"></slot>
 
