--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -30,7 +30,7 @@ This program is available under Apache License Version 2.0, available at https:/
           maxlength$="[[maxlength]]"
           minlength$="[[minlength]]"
           pattern="[[pattern]]"
-          placeholder="[[placeholder]]"
+          placeholder$="[[placeholder]]"
           readonly$="[[readonly]]"
           aria-readonly$="[[readonly]]"
           required$="[[required]]"
