Update theme: use padding for label to prevent cropping letters

--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -33,7 +33,7 @@
         margin-left: calc(var(--lumo-border-radius) / 4);
         transition: color 0.2s;
         line-height: 1;
-        margin-bottom: 0.5em;
+        padding-bottom: 0.5em;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
