--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -35,6 +35,7 @@ This program is available under Apache License Version 2.0, available at https:/
     <div
       part="reveal-button"
       on-mousedown="_revealButtonMouseDown"
+      on-touchend="_togglePasswordVisibilityTouchend"
       on-click="_togglePasswordVisibility"
       hidden$="[[revealButtonHidden]]">
     </div>
@@ -138,6 +139,13 @@ This program is available under Apache License Version 2.0, available at https:/
           if (this.hasAttribute('focused')) {
             e.preventDefault();
           }
+        }
+
+        _togglePasswordVisibilityTouchend(e) {
+          // Cancel the following click event
+          e.preventDefault();
+          this._togglePasswordVisibility();
+          this.focusElement.focus();
         }
 
         _togglePasswordVisibility() {
