--- a/demo/number-field.html
+++ b/demo/number-field.html
@@ -1,42 +1,41 @@
-<!DOCTYPE html>
-<html>
+<dom-module id="number-field">
+  <template>
+    <style include="vaadin-component-demo-shared-styles">
+      :host {
+        display: block;
+      }
+    </style>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <p>The <code>&lt;vaadin-number-field&gt;</code> element has all the same features as the <code>&lt;vaadin-text-field&gt;</code> element plus the additional features listed on this page.</p>
 
-  <title>vaadin-number-field Basic Examples</title>
-
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../iron-form/iron-form.html">
-  <link rel="import" href="common.html">
-</head>
-
-<body unresolved>
-  <div class="vertical-section-container centered">
-    <demo-navigation></demo-navigation>
-    <h3>Number Field</h3>
-    <demo-snippet>
+    <h3>Basic Number Field</h3>
+    <vaadin-demo-snippet id="text-field-number-demos-basic">
       <template>
         <vaadin-number-field></vaadin-number-field>
       </template>
-    </demo-snippet>
+    </vaadin-demo-snippet>
 
     <h3>Number Field with controls</h3>
-    <demo-snippet>
+    <vaadin-demo-snippet id="text-field-number-demos-with-controls">
       <template>
         <vaadin-number-field has-controls></vaadin-number-field>
       </template>
-    </demo-snippet>
+    </vaadin-demo-snippet>
 
     <h3>Number Field with value limits</h3>
-    <demo-snippet>
+    <vaadin-demo-snippet id="text-field-number-demos-with-limits">
       <template>
         <vaadin-number-field value="1" min="1" max="10" has-controls></vaadin-number-field>
       </template>
-    </demo-snippet>
-  </div>
-</body>
+    </vaadin-demo-snippet>
 
-</html>
+  </template>
+  <script>
+    class TextFieldNumberDemos extends DemoReadyEventEmitter(TextFieldDemo(Polymer.Element)) {
+      static get is() {
+        return 'number-field';
+      }
+    }
+    customElements.define(TextFieldNumberDemos.is, TextFieldNumberDemos);
+  </script>
+</dom-module>
