--- a/demo/text-field-number-demos.html
+++ b/demo/text-field-number-demos.html
@@ -1,4 +1,4 @@
-<dom-module id="number-field">
+<dom-module id="text-field-number-demos">
   <template>
     <style include="vaadin-component-demo-shared-styles">
       :host {
@@ -8,23 +8,24 @@
 
     <p>The <code>&lt;vaadin-number-field&gt;</code> element has all the same features as the <code>&lt;vaadin-text-field&gt;</code> element plus the additional features listed on this page.</p>
 
+
     <h3>Basic Number Field</h3>
     <vaadin-demo-snippet id="text-field-number-demos-basic">
-      <template>
+      <template preserve-content>
         <vaadin-number-field></vaadin-number-field>
       </template>
     </vaadin-demo-snippet>
 
     <h3>Number Field with controls</h3>
     <vaadin-demo-snippet id="text-field-number-demos-with-controls">
-      <template>
+      <template preserve-content>
         <vaadin-number-field has-controls></vaadin-number-field>
       </template>
     </vaadin-demo-snippet>
 
     <h3>Number Field with value limits</h3>
     <vaadin-demo-snippet id="text-field-number-demos-with-limits">
-      <template>
+      <template preserve-content>
         <vaadin-number-field value="1" min="1" max="10" has-controls></vaadin-number-field>
       </template>
     </vaadin-demo-snippet>
@@ -33,7 +34,7 @@
   <script>
     class TextFieldNumberDemos extends DemoReadyEventEmitter(TextFieldDemo(Polymer.Element)) {
       static get is() {
-        return 'number-field';
+        return 'text-field-number-demos';
       }
     }
     customElements.define(TextFieldNumberDemos.is, TextFieldNumberDemos);
