--- a/vaadin-number-field.html
+++ b/vaadin-number-field.html
@@ -124,7 +124,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         ready() {
           super.ready();
-          this.$.input.type = 'number';
+          this.focusElement.type = 'number';
         }
 
         static get template() {
@@ -178,11 +178,11 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _minChanged() {
-          this.$.input.min = this.min;
+          this.focusElement.min = this.min;
         }
 
         _maxChanged() {
-          this.$.input.max = this.max;
+          this.focusElement.max = this.max;
         }
 
       }
