--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -159,6 +159,21 @@ This program is available under Apache License Version 2.0, available at https:/
         _maxChanged() {
           this.focusElement.max = this.max;
         }
+
+        _valueChanged(newVal, oldVal) {
+          // native input does not accept certain values and converts
+          // from number to string.
+          this.value = this.focusElement.value;
+          super._valueChanged(this.value, oldVal);
+        }
+
+        checkValidity() {
+          // text-field mixin does not check against `min` and `max`
+          if (this.min !== undefined || this.max !== undefined) {
+            this.invalid = !this.focusElement.checkValidity();
+          }
+          return super.checkValidity();
+        }
       }
 
       window.customElements.define(NumberFieldElement.is, NumberFieldElement);
