--- a/test/number-field.html
+++ b/test/number-field.html
@@ -65,7 +65,7 @@
 
           increaseButton.click();
 
-          expect(numberField.value).to.be.equal(1);
+          expect(numberField.value).to.be.equal('1');
         });
 
         it('should decrease value by 1 when increaseButton is clicked', function() {
@@ -73,7 +73,7 @@
 
           decreaseButton.click();
 
-          expect(numberField.value).to.be.equal(-1);
+          expect(numberField.value).to.be.equal('-1');
         });
 
         it('should not increase value when increaseButton is clicked and max value is reached', function() {
@@ -82,7 +82,7 @@
 
           increaseButton.click();
 
-          expect(numberField.value).to.be.equal(10);
+          expect(numberField.value).to.be.equal('10');
         });
 
         it('should not decrease value when decreaseButton is clicked and min value is reached', function() {
@@ -91,7 +91,7 @@
 
           decreaseButton.click();
 
-          expect(numberField.value).to.be.equal(1);
+          expect(numberField.value).to.be.equal('1');
         });
 
         it('should not change value when number field is disabled and controls are clicked', function() {
@@ -99,10 +99,48 @@
           numberField.value = 0;
 
           increaseButton.click();
-          expect(numberField.value).to.be.equal(0);
+          expect(numberField.value).to.be.equal('0');
 
           decreaseButton.click();
-          expect(numberField.value).to.be.equal(0);
+          expect(numberField.value).to.be.equal('0');
+        });
+
+      });
+
+      describe('input validation', function() {
+
+        it('should be valid with numeric vaules', function() {
+          expect(numberField.validate()).to.be.true;
+
+          numberField.value = '1';
+          expect(numberField.focusElement.value).to.be.equal('1');
+          expect(numberField.validate()).to.be.true;
+        });
+
+        it('should prevent setting non-numeric values', function() {
+          numberField.value = 'foo';
+          expect(numberField.value).to.be.empty;
+          expect(numberField.validate()).to.be.true;
+        });
+
+        it('should validate when setting limits', function() {
+          numberField.min = 2;
+          numberField.max = 4;
+
+          numberField.value = '';
+          expect(numberField.validate(), 'empty value is allowed because not required').to.be.true;
+
+          numberField.value = '3';
+          expect(numberField.validate(), 'valid value should be in the range').to.be.true;
+
+          numberField.value = '1';
+          expect(numberField.validate(), 'value should not be below min').to.be.false;
+
+          numberField.value = '3';
+          expect(numberField.validate(), 'invalid status should be reset when setting valid value').to.be.true;
+
+          numberField.value = '5';
+          expect(numberField.validate(), 'value should not be greater than max').to.be.false;
         });
       });
 
