--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -133,7 +133,7 @@ This program is available under Apache License Version 2.0, available at https:/
             return;
           }
 
-          if (this.min) {
+          if (this.min !== undefined) {
             if (this.value > this.min) {
               this.value--;
             }
@@ -147,7 +147,7 @@ This program is available under Apache License Version 2.0, available at https:/
             return;
           }
 
-          if (this.max) {
+          if (this.max !== undefined) {
             if (this.value < this.max) {
               this.value++;
             }
