--- a/theme/lumo/vaadin-text-area.html
+++ b/theme/lumo/vaadin-text-area.html
@@ -1,4 +1,4 @@
-<link rel="import" href="vaadin-text-area-lumo.html">
+<link rel="import" href="vaadin-text-area-styles.html">
 
 <link rel="import" href="vaadin-text-field.html">
 <link rel="import" href="../../src/vaadin-text-area.html">
