--- a/test/validation.html
+++ b/test/validation.html
@@ -40,13 +40,10 @@
       describe(`${el}: validate`, function() {
         let iform, tf, input;
 
-        beforeEach(function(done) {
+        beforeEach(function() {
           iform = fixture(`${el}-default`);
           tf = iform.querySelector(el);
           input = tf.focusElement;
-          animationFrameFlush(() => {
-            setTimeout(done, 100);
-          });
         });
 
         it('should call validate', function(done) {
