--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -111,7 +111,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         static get version() {
-          return '2.0.0-beta4';
+          return '2.0.0-pre.1';
         }
 
         static get properties() {
