Add label-suffix slot

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -36,8 +36,19 @@ This program is available under Apache License Version 2.0, available at https:/
         width: var(--vaadin-text-field-default-width, 12em);
       }
 
-      [part="label"]:empty {
+      :host(:not([has-label])) [part="label-container"] {
         display: none;
+      }
+
+      [part="label-container"] {
+        display: flex;
+        justify-content: flex-end;
+        min-width: 100%;
+        max-width: 100%;
+      }
+
+      [part="label"] {
+        margin-right: auto;
       }
 
       [part="input-field"] {
