--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -14,7 +14,10 @@ This program is available under Apache License Version 2.0, available at https:/
 
     <div class="vaadin-text-field-container">
 
-      <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
+      <div part="label-container">
+        <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
+        <slot name="label-suffix"></slot>
+      </div>
 
       <div part="input-field">
 
