--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -25,7 +25,7 @@
         align-items: center;
       }
 
-      [part="label"] {
+      [part="label-container"] {
         align-self: flex-start;
         color: var(--lumo-secondary-text-color);
         font-weight: 500;
