Fix required indicator position

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -42,13 +42,9 @@ This program is available under Apache License Version 2.0, available at https:/
 
       [part="label-container"] {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         min-width: 100%;
         max-width: 100%;
-      }
-
-      [part="label"] {
-        margin-right: auto;
       }
 
       [part="input-field"] {
