--- a/theme/lumo/vaadin-text-field.html
+++ b/theme/lumo/vaadin-text-field.html
@@ -66,7 +66,7 @@
         opacity: 0;
         color: var(--lumo-primary-text-color);
         position: absolute;
-        right: 0;
+        margin-right: auto;
         width: 1em;
         text-align: center;
       }
