--- a/test/text-area.html
+++ b/test/text-area.html
@@ -5,6 +5,7 @@
   <title>vaadin-text-area tests</title>
 
   <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../vaadin-text-area.html">
 
 </head>
