--- a/test/text-field.html
+++ b/test/text-field.html
@@ -5,6 +5,7 @@
   <title>vaadin-text-field tests</title>
 
   <script src="../../web-component-tester/browser.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../vaadin-text-field.html">
   <link rel="import" href="../../iron-form/iron-form.html">
 
