--- a/test/password-field.html
+++ b/test/password-field.html
@@ -6,6 +6,7 @@
 
   <script src="../../web-component-tester/browser.js"></script>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link rel="import" href="../../test-fixture/test-fixture.html">
   <link rel="import" href="../vaadin-password-field.html">
   <link rel="import" href="../../iron-form/iron-form.html">
 
