--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -32,8 +32,7 @@ This program is available under Apache License Version 2.0, available at https:/
         display: flex;
         flex-direction: column;
         min-width: 100%;
-        max-width: 100%;
-        width: var(--vaadin-text-field-default-width, 12em);
+        max-width: var(--vaadin-text-field-default-width, 12em);
       }
 
       [part="label"]:empty {
