--- a/test/visual/vaadin-text-field/text-field.html
+++ b/test/visual/vaadin-text-field/text-field.html
@@ -18,6 +18,9 @@
         width: 550px;
         border: solid 1px grey;
       }
+      p {
+        margin: 0;
+      }
     </style>
   </custom-style>
 
