Avoid polymer-cli linter breaking when empty style blocks.
Isue reported at https://github.com/Polymer/tools/issues/408

--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -10,7 +10,9 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <dom-module id="vaadin-text-field">
   <template>
-    <style include="vaadin-text-field-shared-styles"></style>
+    <style include="vaadin-text-field-shared-styles">
+      /* polymer-cli linter breaks with empty line */
+    </style>
 
     <div class="vaadin-text-field-container">
 
