--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -71,6 +71,20 @@ This program is available under Apache License Version 2.0, available at https:/
        * </vaadin-text-field>
        * ```
        *
+       * ### Prefixes and suffixes
+       *
+       * These are child elements of a `<vaadin-text-field>` that are displayed
+       * inline with the input, before or after.
+       * In order for an element to be considered as a prefix, it must have the slot
+       * attribute set to `prefix` (and similarly for `suffix`).
+       *
+       * ```html
+       * <vaadin-text-field label="Email address">
+       *   <div slot="prefix">Sent to:</div>
+       *   <div slot="suffix">@vaadin.com</div>
+       * </vaadin-text-area>
+       * ```
+       *
        * ### Styling
        *
        * The following custom properties are available for styling:
