--- a/theme/material/vaadin-password-field-styles.html
+++ b/theme/material/vaadin-password-field-styles.html
@@ -1,4 +1,4 @@
-<link rel="import" href="vaadin-text-field.html">
+<link rel="import" href="vaadin-text-field-styles.html">
 
 <link rel="import" href="../../../vaadin-material-styles/font-icons.html">
 <link rel="import" href="../../../vaadin-material-styles/mixins/field-button.html">
