--- a/theme/material/vaadin-text-area-styles.html
+++ b/theme/material/vaadin-text-area-styles.html
@@ -1,4 +1,4 @@
-<link rel="import" href="vaadin-text-field.html">
+<link rel="import" href="vaadin-text-field-styles.html">
 
 <dom-module id="material-text-area" theme-for="vaadin-text-area">
   <template>
