--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -64,7 +64,7 @@ This program is available under Apache License Version 2.0, available at https:/
             on-input="_onInput"
             on-change="_onChange"
             aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
-            aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
+            aria-label$="[[label]]"
             aria-invalid$="[[invalid]]"></textarea>
 
         <slot name="suffix"></slot>
