--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -43,7 +43,7 @@ This program is available under Apache License Version 2.0, available at https:/
           on-input="_onInput"
           on-change="_onChange"
           aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
-          aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
+          aria-label$="[[label]]"
           aria-invalid$="[[invalid]]"
         >
 
